# descansa

./: settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/io/nava/descansa/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DescansaCore.cpp  DescansaCore.h  DescansaCoreManager.cpp  DescansaCoreManager.h  SleepAnalyticsEngine.cpp  SleepDataStructures.cpp  SleepDataStructures.h  ThemeManager.cpp  ThemeManager.h  native-lib.cpp
app/src/main/java/io/nava/descansa/app/: MainActivity.java  ThemeSelectionActivity.java
app/src/main/res/drawable/: gradient_random_theme.xml  gradient_system_theme.xml  theme_item_dark_bg.xml  theme_item_selected_bg.xml  theme_item_selector.xml  theme_item_smart_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_theme_selection.xml  item_theme.xml
app/src/main/res/values/: colors.xml  colors_amoled.xml  colors_dracula.xml  colors_everforest_light.xml  colors_nordic.xml  colors_rose_pine.xml  colors_solarized.xml  strings.xml  themes.xml  themes_dracula.xml  themes_everforest_light.xml  themes_nordic.xml  themes_rose_pine.xml  themes_solarized.xml
app/src/main/res/values-night/: themes.xml  themes_amoled.xml
app/src/test/java/io/nava/descansa/app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
